--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ env/
 *.db
 data/*.parquet
 data/*.csv
+data/cache/
+data/nyc-taxi/
+data/*.osm
+data/*.html
 !data/.gitkeep
 .DS_Store
 Thumbs.db
