--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pyarrow>=15.0.0",
     "faker>=25.0.0",
     "numpy>=1.26.0",
+    "matplotlib>=3.7.0",
 ]
 
 [project.optional-dependencies]
